fix(ffe-form): la til spacing mellom description og input-felt

--- a/packages/ffe-form/less/input-group.less
+++ b/packages/ffe-form/less/input-group.less
@@ -57,6 +57,10 @@
         }
     }
 
+    &__description {
+        margin-bottom: @ffe-spacing-xs;
+    }
+
     .ffe-field-error-message {
         margin-top: -24px;
         margin-bottom: 0;
